' Generated by UML Generator
' Encoded: dLAnQiD03DtlApIcb9ZE6KeAfL38L7SB7PIpweZOTqOd1v8q_VPUVE3OBXdQyQJtdjwJRXaKHTkwCc77ha716co58Jof2czQfLVhNSv7WWUpvOB0ijYAZ66d99ze2Tu5NMYyA9mCm7T15Uz9PdSBs7ikpDcOJZ7YMhlhCFStCVcMcviGt0GLj9eSmigN79HjI7Ej42hrPYx4_d4HR2fqpqdqy7lmcyVYBu9NnuJ_uht485uEAUmfdY4AdA56TZEKCYmWZmTmvVfZO3LjCCk-7WUAtSecjQkZB1lMnoddyqZgdvFcc3XAEU6DUcFQabmHFzSF
' URL: http://www.plantuml.com/plantuml/uml/dLAnQiD03DtlApIcb9ZE6KeAfL38L7SB7PIpweZOTqOd1v8q_VPUVE3OBXdQyQJtdjwJRXaKHTkwCc77ha716co58Jof2czQfLVhNSv7WWUpvOB0ijYAZ66d99ze2Tu5NMYyA9mCm7T15Uz9PdSBs7ikpDcOJZ7YMhlhCFStCVcMcviGt0GLj9eSmigN79HjI7Ej42hrPYx4_d4HR2fqpqdqy7lmcyVYBu9NnuJ_uht485uEAUmfdY4AdA56TZEKCYmWZmTmvVfZO3LjCCk-7WUAtSecjQkZB1lMnoddyqZgdvFcc3XAEU6DUcFQabmHFzSF
' Generated on: 2025-11-14T12:49:24.980711312

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Transport {
  ~deliver(): void
}

class Truck {
  +deliver(): void
}

class Ship {
  +deliver(): void
}

abstract class Logistics {
  ~createTransport(): Transport
  +planDelivery(): void
}

class RoadLogistics {
  ~createTransport(): Transport
}

class SeaLogistics {
  ~createTransport(): Transport
}

class Factory {
  +{static} main(args: String[]): void
}

Truck ..|> Transport
Ship ..|> Transport
Logistics ..> Transport
RoadLogistics --|> Logistics
RoadLogistics ..> Transport
SeaLogistics --|> Logistics
SeaLogistics ..> Transport
@enduml